syntax = "proto3";

package protocol;

// MessageType определяет типы сообщений
enum MessageType
{
	MsgController = 0;
	MsgPlayerPosition = 1;
	MsgTerrain = 2;
	MsgChunk = 3;
	MsgChunkRequest = 4;
}

// MessageItem определяет одно сообщение
message MessageItem
{
    MessageType Type = 1;
    bytes Body = 2;
}

// MessageContainer определяет несколько сообщений
message MessageContainer
{
    repeated MessageItem Messages = 1;
}

// Controller определяет клавиши управления
message Controller {
	bool MoveForward = 1;
	bool MoveBackward = 2;
	bool MoveLeft = 3;
	bool MoveRight = 4;
	bool RotateLeft = 5;
	bool RotateRight = 6;

	// Modifiers определяет клавиши-модификаторы
	message Modifiers {
       	bool Shift = 1; 
       	bool Ctrl = 2;
       	bool Alt = 3;
       	bool Meta = 4;
	}
	
    Modifiers modifiers = 7;
}

message Vec3 {
	double X = 1;
	double Y = 2;
	double Z = 3;
}

// PlayerPosition определяет позицию и движение игрока
message PlayerPosition {
	// Position определяет положение игрока
	Vec3 Position = 1;
	// Motion определяет движение игрока
	Vec3 Motion = 2;
	// Angle определяет направление игрока (угол между положительным направленим оси Y и направлением игрока по часовой стрелке)
	double Angle = 3;
	// Slew определяет поворот игрока
	double Slew = 4;
}

// Terrain определяет карту
message Terrain {
	// Width определяет ширину
	int32 Width = 1;
	// Height определяет высоту
	int32 Height = 2;
	// Seed определяет зерно генератора
	int64 Seed = 3;
	// ChunkSize определяет размер чанка
	int32 ChunkSize = 4;
}

// Chunk определяет чанк карты
message Chunk {
	// Index определяет индекс чанка
	int32 Index = 1;

	// Tile определяет тайл карты
	message Tile {
		int32 Ground = 1;
		int32 Block = 2;
		int32 Detail = 3;
	}

	// Map определяет карту
    repeated Tile Map = 2;
}

// ChunkRequest определяет список необходимых чанков
message	ChunkRequest {
    repeated int32 Chunks = 1;
}
